--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ header h1 {
     footer {
         background: #fce138;
         width: 100%;
-        padding: 40px 35px 
+        padding: 40px 35px;
     }
     footer h2 {
         display: inline;
