--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,3 +63,34 @@ header h1 {
     footer a {
         color: #024e76;
     }
+    section {
+        padding: 60px;
+        }
+    /* Hero Style Start */
+    .hero { 
+        background-image: url(../hero-bg.jpeg);
+        height: 600px;
+        background-size: cover;
+        background-position: center;
+        position: relative;
+    }
+    /* Hero Style End */
+    .hero-form {
+        
+         border: 3px solid #024e76;
+        background-color: #fce138;
+        padding: 20px;
+        width: 500px;
+        color: #024e76;
+        position: absolute;
+        bottom: 120px;
+        right: 140px;
+    }
+    .hero-form h3 {
+        font-size: 24px;
+        margin: 0;
+    }
+    .hero-form p {
+        margin: 5px 0 15px 0;
+    }
+    
