--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ header h1 {
     }
     .form-input {
         border: 1px solid #024e76
-        display: block;
+        display block;
         padding: 7px 15px;
         font-size: 16px;
         color: #024e76;
