--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,3 +136,7 @@ header h1 {
         width: 80%;
         font-size: 20px;
     }
+    .intro p {
+        /*add this alongside your other declarations*/
+        margin: 0 auto
+    }
