--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,3 +140,15 @@ header h1 {
         /*add this alongside your other declarations*/
         margin: 0 auto
     }
+    .steps {
+        text-align: center;
+        background: #fce138
+    }
+    .steps h2{
+        font-size: 55px;
+        color: #024e76;
+        margin-bottom: 35px;
+        padding: 0 100px 20px 100px;
+        border-bottom: 3px solid;
+        border-color: #39a6b2
+    }
