--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -232,12 +232,13 @@ header h1 {
     }
     .contact-info iframe {
         width: 400px;
-        height: 400 ;
+        height: 400px;
     }
     .contact-info div {
         width: 410px;
         display: inline-block;
-        vertical-align: left;
+        vertical-align: top;
+        text-align: left;
         margin: 30px 0 0 60px;
         color: white
     }
