--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -256,3 +256,29 @@ header h1 {
         color: #fce138;
     }
     /* REACH OUT STYLE END */
+    /* homepage hero */
+    .hero {
+        margin: 20px;
+        background-color: white;
+        font-size: 20px;
+        color: blue;
+    }
+    /* secondary page hero */
+    .hero-secondary {
+        margin: 20px;
+        background-color: black;
+        font-size: 20px;
+        color: red;
+    }
+    .hero {
+        margin: 20px;
+        font-size: 20px;
+        background-color: white;
+        color: blue;
+    }
+    /* thes two colors will override the above in .hero */
+    .hero-secondary {
+        background-color:  black;
+        color: red;
+    }
+    
