--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -4,44 +4,33 @@
     text-align: center;
     margin-bottom: 40px;
 }
-.hero {
-    background-image: url(./aasets/images/hero-bg.jpg);
-background-size: cover;
-background-position: bottom;
-position: relative;
-height: auto;
-text-align: center;
-margin-bottom: 40px;
+.page-title {
+    color: #fce138;
+    display: inline-block;
+    border-bottom: 4px solid #fce138;
+    padding: 0 80px 15px 80px;
+    font-weight: normal;
+    font-size: 42px;
+    font-style: italic;
 }
 .secondary-content {
     width: 80%;
-    margin: center;
+    margin: auto;
+    color: #024e76;
 }
-.h3 .secondary-content {
+.secondary-content h3 {
     font-size: 25px;
-    margin-top: 20px; 
-    margin-bottom: 20px; 
-    margin-left: 0;
-    margin-right: 0;
+   margin: 20px 0 
 }
-p {
+.secondary-content p {
     font-size: 16px;
     line-height: 1.5;
-    margin-top: 20px; 
-    margin-bottom: 20px; 
-    margin-left: 0;
-    margin-right: 0;
+ margin: 20px 0;
 }
-.ul {
-    margin-top: 15px;
-    margin-bottom: 15;
-    margin-left: 20;
-    margin-right: 20;
+.secondary-content ul {
+ margin: 15px 20px;
 }
-.li {
+.secondary-content li {
     color: #39a6b2;
-    margin-top: 10;
-    margin-bottom: 10;
-    margin-left: 0;
-    margin-right: 0;
+   margin: 10px 0;
 }
