--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,9 +78,11 @@ header h1 {
         background-position: center;
         position: relative;
         background-color: white;
+        margin: 20px;
+        font-size: 20px;
     }
     
-    /* Hero Style End */
+   
     .hero-form {
         
          border: 3px solid #024e76;
