--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -9,11 +9,13 @@ body {
 color: #39a6b2;
 font-family: Helvetica, Arial, sans-serif;
 }
+
 /* apply styles to <header> */
 header {
 padding: 20px 35px;
 background-color: #39a6b2;
 }
+
 header h1 {
 font-weight: bold;
 font-size: 36px;
@@ -21,14 +23,18 @@ color: #fce138;
 margin: 0;
 display: inline
 }
+
 header a {
 text-decoration: none;
 color: #fce138;
 }
+
 header nav{
 float: right;
 margin: 7px 0;
 }
+
+
 header nav ul li{
 margin: 0 30px;
 font-weight: lighter;
@@ -48,11 +54,13 @@ color: #024e76;
 font-size: 30px;
 margin: 0;
 }
+
 footer div {
 float: right;
 line-height:1.5;
 text-align: right;
 }
+
 footer a {
 color: #024e76;
 }
@@ -60,6 +68,7 @@ color: #024e76;
 section {
 padding: 60px;
 }
+
 /*Hero Style Start */
 .hero {
 background-image: url("../hero-bg.jpeg");
@@ -69,6 +78,7 @@ background-position: center;
 position: relative;
 background-color: white;
 }
+
 /* secondary page hero */
 .hero-secondary {
 background-color: black;
@@ -87,10 +97,12 @@ position: absolute;
 bottom: 120px;
 right: 140px;
 }
+
 .hero-form h3 {
 font-size: 24px;
 margin: 0;
 }
+
 .hero-form p {
 margin: 5px 0 15px 0;
 }
@@ -104,9 +116,11 @@ color: #024e76;
 width: 100%;
 margin-bottom: 15px;
 }
+
 .hero-form label {
 margin: 0 5px;
 }
+
 .hero-form button {
 color: #fce138;
 background-color: #024e76;
@@ -119,13 +133,15 @@ font-size: 16px;
 .intro {
 text-align: center;
 }
+
 .intro p {
 line-height: 1.7;
 color: #39a6b2;
 width: 80%;
 font-size: 20px;
 margin: 0 auto;
-}.steps {
+}
+.steps {
 text-align: center;
 background: #fce138;
 }
@@ -137,6 +153,7 @@ margin-bottom: 80px;
 width: 15%;
 margin: 10px 0;
 }
+
 .steps h3 {
 color: #024e76;
 font-size: 46px;
@@ -151,6 +168,7 @@ font-size: 23px;
 .steps span {
 font-size: 38px;
 }
+
 .section-title {
 font-size: 55px;
 color: #024e76;
@@ -163,12 +181,15 @@ border-bottom: 3px solid;
 .primary-border {
 border-color: #fce138;
 }
+
 .secondary-border {
 border-color: #39a6b2;
 }
+
 .trainers {
 text-align: center;
 }
+
 .trainer {
 width: 900px;
 margin: 0 auto 30px auto;
@@ -181,37 +202,46 @@ overflow: auto;
 width: 35%;
 float: left;
 }
+
 .trainer-bio {
 padding: 35px;
 float: left;
 width: 65%;
 }
+
 .text-left {
 text-align: left;
 }
+
 .text-right {
 text-align: right;
 }
+
 .trainer-bio h3 {
 font-size: 32px;
 margin-bottom: 8px;
 }
+
 .trainer-bio h4 {
 font-weight: lighter;
 font-size: 26px;
 margin-bottom: 25;
 }
+
 .trainer-bio p {
 font-size: 17px;
 line-height: 1.3;
 }
+
 .contact {
 text-align: center;
 background: #024e76;
 }
+
 .contact h2 {
 color: #fce138;
 }
+
 .contact-info iframe {
 width: 400px;
 height: 400px;
@@ -225,6 +255,7 @@ text-align: left;
 margin: 30px 0 0 60px;
 color: white;
 }
+
 .contact-info h3 {
 color: #fce138;
 font-size: 32px;
@@ -236,15 +267,19 @@ line-height: 1.5;
 font-size: 20px;
 font-style: normal;
 }  
+
 .contact-info a {
 color: #fce138;
 } 
+
 /* REACH OUT STYLES END */
+
 .hero {
  height: auto;
 text-align: center;
 margin-bottom: 40px;
 }
+
 .page-title {
 color: #fce138;
 display: inline-block;
@@ -254,11 +289,13 @@ font-weight: normal;
 font-size: 42px;
 font-style: italic;
 }
+
 .secondary-content {
 width: 80%;
 margin: auto;
 color: #024e76;
 }
+
 .secondary-content h3 {
 font-size: 25px;
 margin: 20px 0 20px 0
