--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,14 +38,16 @@ display: inline
 footer {
 background: #fce138;
 width: 100%
-padding: 40px 35px; 
+padding  40px 35px; 
 }
+
 footer h2 {
 display: inline;
 color: #024e76;
 font-size: 30px;
 margin: 0;
 }
+
 footer div {
 float: right;
 line-height:1.5;
