--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ padding: 60px;
 }
 /*Hero Style Start */
 .hero {
-background-image: url("../hero-bg.jpeg");
+background-image: url("..//hero-bg.jpg");
 height: 600px;
 background-size: cover;
 background-position: center;
