--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,16 +29,21 @@ text-decoration: none;
 color: #fce138;
 }
 
-header nav{
-margin: 7px 0;
-}
-
-header nav ul li {
+header nav ul li a {
 margin: 0 30px;
 font-weight: lighter;
-font-size: 22px;
-display: inline
+font-size: 1.55vw;
 }
+
+header nav ul {
+display: flex;
+flex-wrap: wrap;
+justify-content: space-between;
+align-items: center;
+list-style: none;
+}
+
+
 footer {
 background: #fce138;
 width: 100%
