--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ color: #39a6b2;
 font-family: Helvetica, Arial, sans-serif;
 }
 /* apply styles to <header> */
+
 header {
 padding: 20px 35px;
 background-color: #39a6b2;
@@ -17,6 +18,7 @@ display: flex;
 justify-content: space-between;
 flex-wrap: wrap;
 }
+
 header h1 {
 font-weight: bold;
 font-size: 36px;
@@ -48,17 +50,18 @@ footer {
 background: #fce138;
 width: 100%
 padding  40px 35px; 
+justify-content: space-between;
+flex-wrap: wrap;
 }
 
 footer h2 {
-display: inline;
 color: #024e76;
 font-size: 30px;
 margin: 0;
 }
 
 footer div {
-float: right;
+
 line-height:1.5;
 text-align: right;        
 }
@@ -71,11 +74,12 @@ padding: 60px;
 /*Hero Style Start */
 .hero {
 background-image: url("..//hero-bg.jpg");
-height: 600px;
 background-size: cover;
 background-position: center;
-position: relative;
 background-color: white;
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
 }
 /* secondary page hero */
 .hero-secondary {
@@ -87,12 +91,8 @@ font-size: 20px;
 .hero-form {
 background-color: #fce138;
 padding: 20px;
-width: 500px;
 color: #024e76;
 border: solid 3px #024e76;
-position: absolute;
-bottom: 120px;
-right: 140px;
 }
 .hero-form h3 {
 font-size: 24px;
@@ -119,6 +119,8 @@ background-color: #024e76;
 border:none;
 padding: 10px 20px;
 font-size: 16px;
+width: 40%;
+margin: 3.5%;
 }
 /*HERO STYLES END*/
 .intro {
@@ -246,3 +248,16 @@ color: #fce138;
 }
  
 /* REACH OUT STYLES END */
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color:#fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+}
