--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,46 +127,63 @@ margin: 3.5%;
 text-align: center;
 }   
 .intro p {
-line-height: 1.7;
-color: #39a6b2;
-width: 80%;
-font-size: 20px;
-margin: 0 auto;
-}   
+    text-align: center;
+}
+
 .steps {
-text-align: center;
 background: #fce138;
 }
-
-.steps div {
-margin-bottom: 80px;
-}
-
-.steps img {
-width: 15%;
-margin: 10px 0;
-}
-    
-.steps h3 {
+.step h3 {
+    flex: 1 30%;
 color: #024e76;
 font-size: 46px;
-margin-top: 10px;
 }   
-.steps p {
-color: #39a6b2;
-font-size: 23px;
-} 
-.steps span {
-font-size: 38px;
+.step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
-    
+
+.step-text p {
+color: #39a6b2;
+font-size: 18px;
+} 
+.step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+}
+
+.step {
+    margin: 50px auto;
+    padding-bottom: 50px;
+    width: 80%;
+    border-bottom: 1px solid #39a6b2;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+.step-img {
+    flex:1 12%;
+    margin-right: 20px;
+}
+.step-text {
+    flex: 12;
+}
+.step-img img {
+    max-width: 100%;
+}
+
 .section-title {
 font-size: 55px;
 color: #024e76;
-margin-bottom: 35px;
-padding: 0 100px 20px 100px;
-display: inline-block;
 border-bottom: 3px solid;
+padding-bottom: 20px;
+text-align: center;
+margin: 0 auto 35px auto;
+width: 50%;
 }  
 .primary-border {
 border-color: #fce138;
@@ -176,8 +193,8 @@ border-color: #fce138;
 border-color: #39a6b2;
 }
 .trainers {
-text-align: center;
 }
+
 .trainer {
 width: 900px;
 margin: 0 auto 30px auto;
@@ -215,7 +232,6 @@ line-height: 1.3;
 }
 /* REACH OUT STYLES START */
 .contact {
-text-align: center;
 background: #024e76;
 }
 .contact h2 {
@@ -260,4 +276,7 @@ color: #fce138;
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+}
+.flex-row {
+    display: flex;
 }
