--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ color: #fce138;
 }
 
 header nav ul li a {
-margin: 0 30px;
+padding: 10px 15px;
 font-weight: lighter;
 font-size: 1.55vw;
 }
@@ -80,6 +80,7 @@ background-color: white;
 display: flex;
 justify-content: center;
 flex-wrap: wrap;
+align-items: flex-start;
 }
 /* secondary page hero */
 .hero-secondary {
@@ -177,7 +178,7 @@ font-size: 18px;
 }
 
 .section-title {
-font-size: 55px;
+font-size: 48px;
 color: #024e76;
 border-bottom: 3px solid;
 padding-bottom: 20px;
@@ -294,7 +295,7 @@ color: #fce138;
     margin: 3.5%;
     color:#fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 .hero-cta h2 {
     font-style: italic;
@@ -304,3 +305,26 @@ color: #fce138;
 .flex-row {
     display: flex;
 }
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+    header h1 a {
+      /* this will be applied on any screen smaller than 980px */
+      color: tomato;
+    }
+  }
+  
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
+    header h1 {
+      /* this will be applied on any screen between 768px and 575px */
+      font-size: 80px;
+    }
+  }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
+    header h1 {
+      /* this will be applied on any screen smaller than 575px */
+      font-size: 100px;
+    }
+  }
