--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -154,18 +154,18 @@ width: 15%;
 margin: 10px 0;
 }
 
-.steps h3 {
+.step h3 {
 color: #024e76;
 font-size: 46px;
 margin-top: 10px;
 }
       
-.steps p {
+.step p {
 color: #39a6b2;
 font-size: 23px;
 }
       
-.steps span {
+.step h4 {
 font-size: 38px;
 }
 
@@ -177,7 +177,15 @@ padding: 0 100px 20px 100px;
 display: inline-block;
 border-bottom: 3px solid;
 }
-      
+     
+.step:nth-child(even) {
+    border-bottom: 1px solid #39a6b2;
+  }
+
+  .step:not(:last-child) {
+    border-bottom: 1px solid #39a6b2;
+  }
+  
 .primary-border {
 border-color: #fce138;
 }
