--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,15 @@ background-color: #39a6b2;
 display: flex;
 justify-content: space-between;
 flex-wrap: wrap;
+position: -webkit-sticky;
+position: sticky;
+top: 0;
+background-image: url("..//hero-bg.jpg");
+background-size: cover;
+background-position: center;
+background-attachment: fixed;
+background-position: 80%;
+
 }
 
 header h1 {
@@ -24,6 +33,7 @@ font-weight: bold;
 font-size: 36px;
 color: #fce138;
 margin: 0;
+text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -35,7 +45,14 @@ header nav ul li a {
 padding: 10px 15px;
 font-weight: lighter;
 font-size: 1.55vw;
+text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
 
 header nav ul {
 display: flex;
@@ -81,6 +98,8 @@ display: flex;
 justify-content: center;
 flex-wrap: wrap;
 align-items: flex-start;
+background-attachment: fixed;
+background-position: 80%;
 }
 /* secondary page hero */
 .hero-secondary {
@@ -90,10 +109,12 @@ margin: 20px;
 font-size: 20px;
 }
 .hero-form {
-background-color: #fce138;
+background-color:  rgba( 252,225,56,0.8);
 padding: 20px;
 color: #024e76;
 border: solid 3px #024e76;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+border-radius: 15px;
 }
 .hero-form h3 {
 font-size: 24px;
@@ -110,6 +131,12 @@ font-size: 16px;
 color: #024e76;
 width: 100%;
 margin-bottom: 15px;
+border-radius: 10px;
+background-color: rgba(255,255,255, 0.75);;
+}
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+outline: none;
 }
 .hero-form label {
 margin: 0 5px;
@@ -122,7 +149,12 @@ padding: 10px 20px;
 font-size: 16px;
 width: 40%;
 margin: 3.5%;
+border-radius: 10px;
 }
+.hero-form button:hover {
+    background-color: #39a6b2;  
+  }
+  
 /*HERO STYLES END*/
 .intro {
 text-align: center;
@@ -160,12 +192,16 @@ font-size: 18px;
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
+
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
+.step:last-child {
+    border-bottom: 1px solid #39a6b2;
+}
+
 .step-img {
     flex:1 12%;
     margin-right: 20px;
@@ -279,7 +315,15 @@ color: #fce138;
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
-}
+    border-radius: 10px; 
+    background-color: (2, 78, 118, o.8);
+    }
+
+    .contact-form input:focus, .contact-form textarea:focus {
+        background-color: rgba (2, 78, 118, o.8);
+        outline: none;
+    }
+
  .contact-form button {
     width: 100%;
     border: none;
@@ -287,7 +331,12 @@ color: #fce138;
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
 }
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+  }
 /* REACH OUT STYLES END */
 .hero-cta {
     width: 35%;
@@ -301,6 +350,7 @@ color: #fce138;
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .flex-row {
     display: flex;
@@ -310,6 +360,7 @@ color: #fce138;
     header {
         padding-bottom: 0;
         justify-content: center;
+        position: relative;
       }
     
       header h1 {
@@ -347,6 +398,10 @@ color: #fce138;
       
       .contact-info iframe{
         flex: 1 100%;
+      }
+      .some-class {
+        text-shadow: 5px 10px 15px black;
+        box-shadow: 5px 10px 15px rgba(0,0,0,25);
       }
       @media screen and (max-width: 768px) {
         section {
@@ -405,3 +460,23 @@ color: #fce138;
       .contact-form {
         order: 3;
       }
+      /* default state */
+button {
+    background: white;
+  }
+  
+  /* mouse is hovering over button */
+  button:hover {
+    background: red;
+  }
+  
+  /* button is in focus because it was the most recently clicked element on the page */
+  button:focus {
+    background: green;
+  }
+  
+  /* user is actively pressing the cursor down on the button */
+  button:active {
+    background: blue;
+  }
+  
