--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,12 @@
 margin: 0;
 padding: 0;
 box-sizing: border-box;
+} 
+
+:root {
+  --primary-color: #fce138;
+  --secondary-color: #024e76;
+  --tertiary-color: #39a6b2;
 }
 
 body {
@@ -10,6 +16,7 @@ color: #39a6b2;
 font-family: Helvetica, Arial, sans-serif;
 }
 /* apply styles to <header> */
+
 
 header {
 padding: 20px 35px;
@@ -25,7 +32,7 @@ background-size: cover;
 background-position: center;
 background-attachment: fixed;
 background-position: 80%;
-
+z-index: 9999;
 }
 
 header h1 {
@@ -60,6 +67,67 @@ flex-wrap: wrap;
 justify-content: space-between;
 align-items: center;
 list-style: none;
+}
+div {
+  --favorite-color: blue;
+  color: var(--favorite-color);
+  box-shadow: 5px 5px 10px var(--favorite-color);
+}
+
+checkbox-wrapper input, .radio-wrapper input {
+  opacity: 0;
+}
+.checkbox-wrapper label, .radio-wrapper label {
+  position: relative;
+  left: 10px;
+  margin: 10px;
+  line-height: 1.6;
+}
+.checkbox-wrapper label::before, .radio-wrapper label::before {
+  content: "";
+  height: 20px;
+  width: 20px;
+  background: rgba(255, 255, 255, 0.75);  
+  border: 1px solid #024e76;  
+  position: absolute;
+  top: -4px;
+  left: -30px;
+}
+.radio-wrapper label::before {
+  border-radius: 50%;
+}
+.radio-wrapper label::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #024e76;
+  position: absolute;
+  left: -29px;
+  top: -3px;
+  background-image: radial-gradient(circle, #39a6b2, #024e76);
+}
+
+.checkbox-wrapper label::after {
+  content: "";
+  height: 6px;
+  width: 14px;
+  border-left: 2px solid #024e76;
+  border-bottom: 2px solid #024e76;
+  position: absolute;
+  left: -26px;
+  top: 1px;
+  transform: rotate(-58deg);
+}
+
+.checkbox-wrapper input + label::after, 
+.radio-wrapper input + label::after {
+  content: none;
+}
+
+.checkbox-wrapper input:checked + label::after, 
+.radio-wrapper input:checked + label::after {
+  content: "";
 }
 
 
@@ -156,63 +224,71 @@ border-radius: 10px;
   }
   
 /*HERO STYLES END*/
-.intro {
-text-align: center;
-}   
-.intro p {
-    text-align: center;
+
+.intro p {line-height: 1.7;
+  color: #39a6b2;
+  width: 80%;
+  margin: 0 auto;
+  font-size: 20px;
+  text-align: center;
 }
 
-.steps {
-background: #fce138;
-}
-.step h3 {
-    flex: 1 30%;
-color: #024e76;
-font-size: 46px;
-}   
-.step-info {
-    flex: 2 70%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-}
+.step {
+  background: #fce138;
 
-.step-text p {
-color: #39a6b2;
-font-size: 18px;
-} 
-.step-text h4 {
-    font-size: 26px;
-    line-height: 1.5;
-    color: #024e76;
 }
 
 .step {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-
+    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-}
-.step:last-child {
-    border-bottom: 1px solid #39a6b2;
-}
-
-.step-img {
-    flex:1 12%;
+  }
+  
+  .step:last-child {
+    border-bottom: none;
+  }
+  
+  .step h3 {
+    color: #024e76;
+    font-size: 46px;
+    flex: 1 30%;
+  }
+  
+  .step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  
+  .step-img {
+    flex: 1 12%;
     margin-right: 20px;
-}
-.step-text {
-    flex: 12;
-}
-.step-img img {
+  }
+  
+  .step-img img {
     max-width: 100%;
-}
-
+  }
+  
+  .step-text {
+    flex: 12;
+  }
+  
+  .step-text p {
+    color: #39a6b2;
+    font-size: 18px;
+  }
+  
+  .step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+  }
 .section-title {
 font-size: 48px;
 color: #024e76;
