--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,22 @@
-* {
-margin: 0;
-padding: 0;
-box-sizing: border-box;
-} 
-
 :root {
   --primary-color: #fce138;
   --secondary-color: #024e76;
   --tertiary-color: #39a6b2;
 }
-
-body {
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+} 
+body 
+{
 /* more on this crazy alphanumerical value in a minute! */
 color: #39a6b2;
 font-family: Helvetica, Arial, sans-serif;
 }
 /* apply styles to <header> */
 
-
+/*Header Start*/
 header {
 padding: 20px 35px;
 background-color: #39a6b2;
@@ -47,7 +46,16 @@ header a {
 text-decoration: none;
 color: #fce138;
 }
-
+header nav {
+  margin: 7px 0;
+}
+header nav ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  }
 header nav ul li a {
 padding: 10px 15px;
 font-weight: lighter;
@@ -55,176 +63,139 @@ font-size: 1.55vw;
 text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 header nav ul li a:hover {
-    background: #fce138;
-    color: #024e76;
-    border-radius: 15px;
-    text-shadow: none;
-  }
-
-header nav ul {
-display: flex;
-flex-wrap: wrap;
-justify-content: space-between;
-align-items: center;
-list-style: none;
-}
-div {
-  --favorite-color: blue;
-  color: var(--favorite-color);
-  box-shadow: 5px 5px 10px var(--favorite-color);
-}
-
-checkbox-wrapper input, .radio-wrapper input {
-  opacity: 0;
-}
-.checkbox-wrapper label, .radio-wrapper label {
-  position: relative;
-  left: 10px;
-  margin: 10px;
-  line-height: 1.6;
-}
-.checkbox-wrapper label::before, .radio-wrapper label::before {
-  content: "";
-  height: 20px;
-  width: 20px;
-  background: rgba(255, 255, 255, 0.75);  
-  border: 1px solid #024e76;  
-  position: absolute;
-  top: -4px;
-  left: -30px;
-}
-.radio-wrapper label::before {
-  border-radius: 50%;
-}
-.radio-wrapper label::after {
-  content: "";
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #024e76;
-  position: absolute;
-  left: -29px;
-  top: -3px;
-  background-image: radial-gradient(circle, #39a6b2, #024e76);
-}
-
-.checkbox-wrapper label::after {
-  content: "";
-  height: 6px;
-  width: 14px;
-  border-left: 2px solid #024e76;
-  border-bottom: 2px solid #024e76;
-  position: absolute;
-  left: -26px;
-  top: 1px;
-  transform: rotate(-58deg);
-}
-
-.checkbox-wrapper input + label::after, 
-.radio-wrapper input + label::after {
-  content: none;
-}
-
-.checkbox-wrapper input:checked + label::after, 
-.radio-wrapper input:checked + label::after {
-  content: "";
-}
-
-
-footer {
 background: #fce138;
-width: 100%
-padding  40px 35px; 
-justify-content: space-between;
-flex-wrap: wrap;
-}
-
-footer h2 {
 color: #024e76;
-font-size: 30px;
-margin: 0;
-}
-
-footer div {
-
-line-height:1.5;
-text-align: right;        
-}
-footer a {
-color: #024e76;
-}
-section {
-padding: 60px;
-}
-/*Hero Style Start */
-.hero {
-background-image: url("..//hero-bg.jpg");
-background-size: cover;
-background-position: center;
-background-color: white;
-display: flex;
-justify-content: center;
-flex-wrap: wrap;
-align-items: flex-start;
-background-attachment: fixed;
-background-position: 80%;
-}
-/* secondary page hero */
-.hero-secondary {
-background-color: black;
-color: red;
-margin: 20px;
-font-size: 20px;
-}
-.hero-form {
-background-color:  rgba( 252,225,56,0.8);
-padding: 20px;
-color: #024e76;
-border: solid 3px #024e76;
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 border-radius: 15px;
+text-shadow: none;
 }
-.hero-form h3 {
-font-size: 24px;
-margin: 0;
-}
-.hero-form p {
-margin: 5px 0 15px 0;
-}
-.form-input {
-border: 1px solid #024e76;
-display: block;
-padding: 7px 15px;
-font-size: 16px;
-color: #024e76;
-width: 100%;
-margin-bottom: 15px;
-border-radius: 10px;
-background-color: rgba(255,255,255, 0.75);;
-}
-.form-input:focus {
-    background-color: rgba(255,255,255, 1);
-outline: none;
-}
-.hero-form label {
-margin: 0 5px;
-}
-.hero-form button {
-color: #fce138;
-background-color: #024e76;
-border:none;
-padding: 10px 20px;
-font-size: 16px;
-width: 40%;
-margin: 3.5%;
-border-radius: 10px;
-}
-.hero-form button:hover {
-    background-color: #39a6b2;  
+/* Header End*/
+
+/*Footer Start*/
+footer {
+  background: #fce138;
+  width: 100%
+  padding  40px 35px; 
+  justify-content: space-between;
+  flex-wrap: wrap;
   }
   
-/*HERO STYLES END*/
+  footer h2 {
+  color: #024e76;
+  font-size: 30px;
+  margin: 0;
+  }
+  
+  footer div {
+  
+  line-height:1.5;
+  text-align: right;        
+  }
+  footer a {
+  color: #024e76;
+  }
+/*Footer End*/
 
+/*Style Section*/
+section {
+  padding: 60px;
+}
+
+/*Hero Style Start */
+.hero {
+  background-image: url("..//hero-bg.jpg");
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  background-attachment: fixed;
+  background-position: 80%;
+  }
+  .hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color:#fff;
+    font-size: 18px;
+    line-height: 1.2;
+  }
+  .hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  .hero-form {
+  background-color:  rgba( 252,225,56,0.8);
+  padding: 20px;
+  color: #024e76;
+  border: solid 3px #024e76;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  width: 40%;
+  margin: 3.5%;
+  }
+  .hero-form button:hover {
+    background-color: #39a6b2;  
+  }
+  .hero-form h3 {
+  font-size: 24px;
+  margin: 0;
+  }
+  .hero-form p {
+  margin: 5px 0 15px 0;
+  }
+  .form-input {
+  border: 1px solid #024e76;
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
+  color: #024e76;
+  width: 100%;
+  margin-bottom: 15px;
+  border-radius: 10px;
+  background-color: rgba(255,255,255, 0.75);;
+  }
+  .form-input:focus {
+   background-color: rgba(255,255,255, 1);
+  outline: none;
+  }
+  .hero-form label {
+  margin: 0 5px;
+  }
+  .hero-form button {
+  color: #fce138;
+  background-color: #024e76;
+  border:none;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 10px;
+  }
+ 
+  /*Header Stop*/
+
+/*Section Title Starts*/
+
+  .section-title {
+    font-size: 48px;
+    color: #024e76;
+    border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
+    }  
+    .primary-border {
+      border-color: #fce138;
+      }
+         
+      .secondary-border {
+      border-color: #39a6b2;
+      }
+/*Section Title Stops*/
+
+/*What We Do Start*/
 .intro p {line-height: 1.7;
   color: #39a6b2;
   width: 80%;
@@ -232,13 +203,15 @@ border-radius: 10px;
   font-size: 20px;
   text-align: center;
 }
+/*What We Do End*/
 
-.step {
+/*What You Do Styles Start*/
+
+.steps { 
   background: #fce138;
-
 }
 
-.step {
+.steps {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
@@ -249,17 +222,17 @@ border-radius: 10px;
     justify-content: space-between;
   }
   
-  .step:last-child {
+  .steps :last-child {
     border-bottom: none;
   }
   
-  .step h3 {
+  .steps h3 {
     color: #024e76;
     font-size: 46px;
     flex: 1 30%;
   }
   
-  .step-info {
+  .steps-intro {
     flex: 2 70%;
     display: flex;
     flex-wrap: wrap;
@@ -271,84 +244,71 @@ border-radius: 10px;
     margin-right: 20px;
   }
   
-  .step-img img {
+  .steps-img img {
     max-width: 100%;
   }
   
-  .step-text {
+  .steps-text {
     flex: 12;
   }
   
-  .step-text p {
+  .steps-text p {
     color: #39a6b2;
     font-size: 18px;
   }
   
-  .step-text h4 {
+  .steps-text h4 {
     font-size: 26px;
     line-height: 1.5;
     color: #024e76;
   }
-.section-title {
-font-size: 48px;
-color: #024e76;
-border-bottom: 3px solid;
-padding-bottom: 20px;
-text-align: center;
-margin: 0 auto 35px auto;
-width: 50%;
-}  
-.primary-border {
-border-color: #fce138;
-}
-   
-.secondary-border {
-border-color: #39a6b2;
-}
+/*What You Do Style Stops*/
+
+/*Meet The Trainers Start*/
 .trainers {
-    width: 100%;
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  width: 100%;
+  margin: 0% auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 .trainer {
-margin: 20px;
-background: #024e76;
-color: #fce138;
-flex: 1
-}
+  margin: 20px;
+  background: #024e76;
+  color: #fce138;
+  flex: 1
+  }
+  
+  .trainer img {
+  width: 100%
+  }
+  
+  .trainer-bio {
+  padding: 25px;
+  line-height: 1.3;
+  }
+  .trainer-bio h3 {
+  font-size: 28px;
+  }
+  .trainer-bio h4 {
+  font-weight: lighter;
+  font-size: 22px;
+  margin-bottom: 15px;
+  }
+  .trainer-bio p {
+  font-size: 17px;
+  }
+  */Meet The Trainers End*/
 
-.trainer img {
-width: 100%
-}
 
-.trainer-bio {
-padding: 25px;
-line-height: 1.3;
-}
-.text-left {
-text-align: left;
-}
-.text-right {
-text-align: right;
-}
-.trainer-bio h3 {
-font-size: 28px;
-}
-.trainer-bio h4 {
-font-weight: lighter;
-font-size: 22px;
-margin-bottom: 15;
-}
-.trainer-bio p {
-font-size: 17px;
-}
 /* REACH OUT STYLES START */
 .contact {
 background: #024e76;
 }
+.contact h2 {
+  color: #fce138;
+  }
 .contact-info {
     display: flex;
     justify-content: space-between;
@@ -357,10 +317,6 @@ background: #024e76;
 .contact-info > * {
     flex: 1;
     margin: 15px;
-}
-
-.contact h2 {
-color: #fce138;
 }
 .contact-info iframe {
  height: 400px;
@@ -378,10 +334,9 @@ font-size: 32px;
 margin: 20px 0;
 line-height: 1.5;
 font-size: 16px;
+font-style: normal;
 }
-.contact-info a {
-color: #fce138;
-}
+
 .contact-form input, .contact-form textarea {
     border: 1px solid #024e76;
     display: block;
@@ -392,11 +347,11 @@ color: #fce138;
     margin-bottom: 15px;
     margin-top: 5px;
     border-radius: 10px; 
-    background-color: (2, 78, 118, o.8);
+    background-color:  rgba(255,255,255, 0.75);
     }
 
     .contact-form input:focus, .contact-form textarea:focus {
-        background-color: rgba (2, 78, 118, o.8);
+        background-color: rgba (255, 255, 244, 1);
         outline: none;
     }
 
@@ -413,21 +368,23 @@ color: #fce138;
     color: #fce138;
     background: #39a6b2;
   }
-/* REACH OUT STYLES END */
-.hero-cta {
-    width: 35%;
-    text-align: right;
-    margin: 3.5%;
-    color:#fff;
-    font-size: 18px;
-    line-height: 1.2;
-}
-.hero-cta h2 {
-    font-style: italic;
-    font-size: 55px;
+  contact-info a {
     color: #fce138;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    }
+    .contact-info{
+      background-color: #024e76;
+    }
+/* REACH OUT STYLES END */
+
+/*Utilities*/
+.text-left {
+  text-align: left;
 }
+.text-right{
+  text-align: right;
+  
+}
+
 .flex-row {
     display: flex;
 }
@@ -536,6 +493,62 @@ color: #fce138;
       .contact-form {
         order: 3;
       }
+      checkbox-wrapper input, .radio-wrapper input {
+        opacity: 0;
+      }
+      .checkbox-wrapper label, .radio-wrapper label {
+        position: relative;
+        left: 10px;
+        margin: 10px;
+        line-height: 1.6;
+      }
+      .checkbox-wrapper label::before, .radio-wrapper label::before {
+        content: "";
+        height: 20px;
+        width: 20px;
+        background: rgba(255, 255, 255, 0.75);  
+        border: 1px solid #024e76;  
+        position: absolute;
+        top: -4px;
+        left: -30px;
+      }
+      .radio-wrapper label::before {
+        border-radius: 50%;
+      }
+      .radio-wrapper label::after {
+        content: "";
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: #024e76;
+        position: absolute;
+        left: -29px;
+        top: -3px;
+        background-image: radial-gradient(circle, #39a6b2, #024e76);
+      }
+      
+      .checkbox-wrapper label::after {
+        content: "";
+        height: 6px;
+        width: 14px;
+        border-left: 2px solid #024e76;
+        border-bottom: 2px solid #024e76;
+        position: absolute;
+        left: -26px;
+        top: 1px;
+        transform: rotate(-58deg);
+      }
+      
+      .checkbox-wrapper input + label::after, 
+      .radio-wrapper input + label::after {
+        content: none;
+      }
+      
+      .checkbox-wrapper input:checked + label::after, 
+      .radio-wrapper input:checked + label::after {
+        content: "";
+      } 
+
       /* default state */
 button {
     background: white;
@@ -555,4 +568,10 @@ button {
   button:active {
     background: blue;
   }
-  
+  /* secondary page hero */
+.hero-secondary {
+  background-color: black;
+  color: red;
+  margin: 20px;
+  font-size: 20px;
+  }
